welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:4: error: not found: value getColorSol
while(getColorSol() != Color.orange){
      ^