welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var nbBiscuit:Int = 0;

while(getColorSol() != Color.orange){
nbBiscuit = 0;
for(pas <- 1 to 5)
{
	if(estSurBiscuit()){

	nbBiscuit = nbBiscuit + 1;
		
	}

	

	
}
if(nbBiscuit < 3){

	droite();
	
}else if(nbBiscuit > 3){

	gauche();
	
}

}
avance();